RESOLVED FIXED132500
REGRESSION (WebKit2) Need to support transliterate Chinese button (简⇄繁) for Traditional Chinese
https://bugs.webkit.org/show_bug.cgi?id=132500
Summary REGRESSION (WebKit2) Need to support transliterate Chinese button (简⇄繁) for T...
Enrica Casucci
Reported 2014-05-02 16:07:45 PDT
This tracks the work required. <rdar://problem/16778870>
Attachments
patch (3.00 KB, patch)
2014-05-02 16:12 PDT, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-05-02 16:12:56 PDT
Benjamin Poulain
Comment 2 2014-05-02 16:27:53 PDT
Comment on attachment 230714 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=230714&action=review > Source/WebKit2/ChangeLog:10 > + This is done by pressing the ç®âç¹ button on the system The ç®âç¹ button? :)
Enrica Casucci
Comment 3 2014-05-02 16:37:01 PDT
Committed revision 168206.
Note You need to log in before you can comment on or make changes to this bug.